--- a/Projet_Généalogique/ProjetGénéalogique/pom.xml
+++ b/Projet_Généalogique/ProjetGénéalogique/pom.xml
@@ -14,6 +14,7 @@
         <javafx.version>21.0.1</javafx.version>
     </properties>
 
+
     <dependencies>
         <!-- JavaMail (Jakarta Mail) -->
         <dependency>
@@ -33,6 +34,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>21.0.5</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.3</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -172,8 +179,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <release>21</release>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
 
@@ -182,7 +199,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>test.Main</mainClass>
+                    <mainClass>test.test.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -195,6 +212,7 @@
                 </includes>
             </resource>
         </resources>
+
     </build>
 
 
