--- a/Projet_Généalogique/ProjetGénéalogique/pom.xml
+++ b/Projet_Généalogique/ProjetGénéalogique/pom.xml
@@ -42,6 +42,18 @@
             <version>5.10.3</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
@@ -209,6 +221,12 @@
                 <directory>ressources</directory>
                 <includes>
                     <include>**/*.csv</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>ressources</directory>
+                <includes>
+                    <include>**/*.json</include>
                 </includes>
             </resource>
         </resources>
