--- a/Projet_Généalogique/ProjetGénéalogique/pom.xml
+++ b/Projet_Généalogique/ProjetGénéalogique/pom.xml
@@ -226,7 +226,7 @@
             <resource>
                 <directory>ressources</directory>
                 <includes>
-                    <include>**/*.json</include>
+                    <include>**/*.txt</include>
                 </includes>
             </resource>
         </resources>
