--- a/Projet_Généalogique/ProjetGénéalogique/pom.xml
+++ b/Projet_Généalogique/ProjetGénéalogique/pom.xml
@@ -229,6 +229,12 @@
                     <include>**/*.txt</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.css</include>
+                </includes>
+            </resource>
         </resources>
 
     </build>
