formulaire ajout/modification d'un noeud + demande de suppression

--- a/Projet_Généalogique/ProjetGénéalogique/.env
+++ b/Projet_Généalogique/ProjetGénéalogique/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
