--- a/Projet_Généalogique/ProjetGénéalogique/pom.xml
+++ b/Projet_Généalogique/ProjetGénéalogique/pom.xml
@@ -235,6 +235,12 @@
                     <include>**/*.css</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>ressources/images</directory>
+                <includes>
+                    <include>**/*.png</include>
+                </includes>
+            </resource>
         </resources>
 
     </build>
